<resources>
    <string name="app_name">Cal and Burn</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="food_label">อาหาร</string>
    <string name="burn_label">กิจกรรม</string>
    <string name="report_label">รายงานผล</string>
    <string name="information_label">ข้อมูลน่ารู้</string>
    <string name="profile_label">ข้อมูลส่วนตัว</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_input_profile">InputProfile</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_cal">CalActivity</string>
    <string name="title_activity_burn">BurnActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="name1">ชื่อ :</string>
    <string name="sex1">เพศ :</string>
    <string name="age1">อายุ :</string>
    <string name="height1">ส่วนสูง :</string>
    <string name="weight1">น้ำหนัก :</string>
    <string name="act1">กิจกรรม :</string>
    <string name="bmi1">BMI :</string>
    <string name="weight_std">น้ำหนักอยู่ในเกณฑ์ :</string>
    <string name="bmr1">พลังงานที่ใช้ต่อวัน :</string>
    <string name="editdata1">แก้ไขข้อมูล</string>
    <string name="mainmenu1">เมนูหลัก</string>

    <string name="re_date"><u>วันที่</u></string>
    <string name="re_listfood"><u>รายการอาหาร</u></string>
    <string name="re_listactivity"><u>รายการกิจกรรม</u></string>
    <string name="re_cal"><u>calorie</u></string>
    <string name="re_num"><u>จำนวน</u></string>
    <string name="re_time"><u>ชั่วโมง/นาที</u></string>
    <string name="his_data">ข้อมูลย้อนหลัง</string>

    <string name="get">ได้รับไป</string>
    <string name="list_to_day">รายการที่ทำวันนี้</string>
    <string name="requires">จากที่ต้องใช้ต่อวัน</string>
    <string name="hour">ชั่วโมง</string>
    <string name="min">นาที</string>
    <string name="acthour">ต่อ 1 ชั่วโมง</string>
    <string name="unit">ต่อ 1 หน่วย</string>
    <string name="calorie">cal</string>
    <string name="list_food">รายการบริโภค</string>
    <string name="list_burn">รายการเผาผลาญ</string>
    <string name="eat">กินไป..</string>
    <string name="burn">เผาผลาญไป..</string>
    <string name="title_activity_edit_profile">EditProfile</string>

    <string name="h1_bmi"><b>BMI</b></string>
    <string name="info_bmi">\<b>BMI (Body Mass Index)</b> ดัชนีมวลกาย คือ
        ค่าดัชนีที่คำนวณจากน้ำหนักและส่วนสูงเพื่อใช้เปรียบเทียบความสมดุลระหว่างน้ำหนักตัวต่อความสูง โดยหาได้จากสูตร</string>
    <string name="formula_bmi"><i>BMI = น้ำหนัก(kg)/ส่วนสูง(m)^2</i></string>
    <string name="info_bmi2"><u>ความสำคัญต่อการรู้ค่าดัชนีมวลกาย</u> เพื่อดูอัตราการเสี่ยงต่อการเกิดโรคต่างๆ
    โดย BMI จะใช้เป็นเกณฑ์ในการประเมิณภาวะอ้วนหรือผอม</string>
    <string name="info_bmi3">1. ถ้า BMI น้อยกว่า 18.5 -- น้ำหนักน้อยกว่ามาตรฐาน</string>
    <string name="info_bmi4">2. ถ้า BMI อยู่ระหว่าง 18.5 - 22.9 -- น้ำหนักปกติ</string>
    <string name="info_bmi5">3. ถ้า BMI อยู่ระหว่าง 23 - 24.9 -- โรคอ้วนระดับ 1</string>
    <string name="info_bmi6">4. ถ้า BMI อยู่ระหว่าง 25 - 29.9 -- โรคอ้วนระดับ 2</string>
    <string name="info_bmi7">5. ถ้า BMI อยู่ระหว่าง 30 - 39.9 -- โรคอ้วนระดับ 3</string>
    <string name="info_bmi8">6. ถ้า BMI เท่ากับ 40 หรือมากกว่า -- โรคอ้วนขึ้นสุด</string>

    <string name="h1_bmr">BMR</string>
    <string name="formula_bmr_male">BMR = 66 + (13.7 * น้ำหนัก(kg)) + (5 * ส่วนสูง(cm)) - (6.8 * อายุ(ปี))</string>
    <string name="formula_bmr_female">BMR = 665 + (9.6 * น้ำหนัก(kg)) + (1.8 * ส่วนสูง(cm)) - (4.7 * อายุ(ปี))</string>
    <string name="bmr_male"><b>สำหรับผู้ชาย</b></string>
    <string name="bmr_female"><b>สำหรับผู้หญิง</b></string>
    <string name="info_bmr"><b>Basal Metabolic Rate(BMR)</b> คือ อัตราความต้องการเผาผลาญของร่างกายในแต่ละวัน หรือจำนวณแคลอรีขั้นต่ำที่ร่างกายต้องการใช้ในชีวิตประจำวัน
        คิดในสภาวะที่ไม่มีการออกกำลังกายใด ๆ โดยคำนวณจาก อายุ, เพศ, ส่วนสูง, น้ำหนัก</string>
    <string name="info_bmr2">ในการคำนวณพลังงานที่ร่างกายต้องใช้ต่อวันเพื่อใช้ในการลดและควบคุมน้ำหนัก
        จะคำนวณได้จากการนำเอาปัจจัยของกิจกรรมมาคำนวณร่วมกับ BMR</string>
    <string name="info_bmr3">1. นั่งทำงาน ไม่ได้ออกกำลังกาย = BMR * 1.2</string>
    <string name="info_bmr4">2. ออกกำลังกายเล็กน้อย 1-3 วัน = BMR * 1.375</string>
    <string name="info_bmr5">3. ออกกำลังกายปานกลาง 3-5 วัน = BMR * 1.55</string>
    <string name="info_bmr6">4. ออกกำลังกายสม่ำเสมอ 6-7 วัน = BMR * 1.725</string>
    <string name="info_bmr7">5. ออกกำลังกายอย่างหนักเช้าเย็น = BMR * 1.9</string>


</resources>
