<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.calandburn.ProfileActivity"
    android:background="@drawable/bg4">

    <ImageView
        android:id="@+id/banner2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000000" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/banner2" />

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner2">

        <TextView
            android:id="@+id/txtTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#502800"
            android:text="ข้อมูลส่วนตัว"
            android:textColor="#ffffff"
            android:textSize="22dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linBotton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editdata1"
            android:onClick="onClickEditProfile" />

        <Button
            android:id="@+id/mainmenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clickMainMenu"
            android:text="@string/mainmenu1" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linBotton"
        android:layout_below="@+id/profile"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name1"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New Text"
                    android:textSize="@dimen/h4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sex1"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New Text"
                    android:textSize="@dimen/h4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/age1"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New Text"
                    android:textSize="@dimen/h4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/height1"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New Text"
                    android:textSize="@dimen/h4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weight1"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New Text"
                    android:textSize="@dimen/h4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/act1"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New Text"
                    android:textSize="@dimen/h4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bmi1"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New Text"
                    android:textSize="@dimen/h4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/weight_std"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New Text"
                    android:textSize="@dimen/h4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bmr1"
                    android:textSize="@dimen/h3"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="New Text"
                    android:textSize="@dimen/h4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
